# clawdstrike

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  deny.toml  mise.toml
.github/: dependabot.yml  release.yml
.github/workflows/: ci.yml  docs.yml  release.yml
HomebrewFormula/: hush.rb
crates/clawdstrike/src/: jailbreak.rs  output_sanitizer.rs
crates/hush-cli/: Cargo.toml
crates/hush-cli/src/: main.rs  policy_event.rs  policy_pac.rs  tests.rs
crates/hush-core/: Cargo.toml
crates/hush-core/src/: canonical.rs  error.rs  hashing.rs  lib.rs  merkle.rs  receipt.rs  signing.rs
crates/hush-core/tests/: proptest_crypto.rs  proptest_merkle.rs
crates/hush-proxy/: Cargo.toml
crates/hush-proxy/src/: dns.rs  error.rs  lib.rs  policy.rs  sni.rs
crates/hush-wasm/: README.md  README.npm.md  package.json
crates/hush-wasm/src/: lib.rs
crates/hush-wasm/tests/: integration.rs  web.rs
crates/hushclaw/: Cargo.toml
crates/hushclaw/src/: engine.rs  error.rs  event.rs  lib.rs  policy.rs
crates/hushclaw/src/guards/: egress.rs  egress_allowlist.rs  forbidden_path.rs  mcp_tool.rs  mod.rs  patch_integrity.rs  secret_leak.rs
crates/hushd/: Cargo.toml
crates/hushd/src/: config.rs  lib.rs  main.rs  rate_limit.rs  state.rs
crates/hushd/src/api/: mod.rs
crates/hushd/tests/: integration.rs
crates/hushd/tests/common/: mod.rs
deploy/launchd/: README.md  dev.hushclaw.hushd.plist
docs/plans/: 2026-01-31-cli-polish.md  2026-01-31-devops-polish.md  2026-01-31-guard-suite.md  2026-01-31-hush-py-python-sdk.md  2026-01-31-hush-wasm-bindings.md  2026-01-31-hush-wasm.md  2026-01-31-hushclaw-oss-workspace.md  2026-01-31-python-enhancements.md  2026-01-31-python-sdk.md  2026-01-31-ws10-publishing-tooling.md  implementation-pad.md
docs/plans/custom-guards/: guard-sdk.md  marketplace.md  versioning.md
docs/plans/policy-as-code/: opa-rego.md  validation.md  versioning.md
docs/src/concepts/: architecture.md  design-philosophy.md  guards.md  multi-language.md
docs/src/getting-started/: quick-start-python.md  quick-start-typescript.md
docs/src/guides/: custom-guards.md  openclaw-integration.md  vercel-ai-integration.md
docs/src/reference/api/: README.md  cli.md  python.md  (+2 more)
examples/docker-compose/: README.md  config.yaml  docker-compose.yml  policy.yaml
rulesets/: ai-agent.yaml  cicd.yaml  default.yaml  strict.yaml
scripts/: bump-version.sh  test-platform.sh
(+1 files in other folders)
