[package]
name = "hushclaw"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Security policy enforcement guards for AI agent runtimes"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
globset.workspace = true
ipnet.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
